--- a/TUGAS HCI/assets/css/charStyle.css
+++ b/TUGAS HCI/assets/css/charStyle.css
@@ -1,30 +1,63 @@
-main .slides{
-  height: auto;
+/* slides */
+main .container{
+  justify-content: center;
+  display: flex;
   width: 70%;
   background-color:white;
+  border-radius: 40px;
+  margin: 30px 0;
 }
-main .slides .doc{
+main .container .slides{
+  height: auto;
+  padding: 0 30px;
+}
+
+main .container .slides .doc{
   width: 80%;
-  height: 100px;
-  margin: auto;
-  padding-top: 20px
-}
-main .slides .image{
-  width: 70%;
-  height: auto;
-  margin: auto;
-  display: flex;
+  padding-top: 20px;
   justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
-main .slides .desc{
+main .container .slides .desc{
   width: 70%;
   height: auto;
   margin: auto;
+  font-size: 100%
 }
-main .slides .image img{
-  width: 350px;
-  height: 250px
+main .container .slides img{
+  padding-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
-main .slides .desc p,li{
+main .container .slides .desc p,li{
   align-items: center;
+}
+.btn{
+  color: white;
+  background-color: black;
+  border:none;
+  width: 60px;
+  /* border-radius: 10px; */
+  height: 60px
+}
+.btn:hover{
+  color: black;
+  background-color: grey;
+}
+main .container .left{
+  position:absolute;
+  top:68%;
+  left:0%;
+  transform:translate(0%,-50%);
+  -ms-transform:translate(-0%,-50%)
+}
+main .container .right{
+  position:absolute;
+  top:68%;
+  right:0%;
+  -ms-transform:translate(0%,-50%)
+  transform:translate(0%,-50%);
 }
