--- a/TUGAS HCI/assets/css/charStyle.css
+++ b/TUGAS HCI/assets/css/charStyle.css
@@ -1,3 +1,6 @@
+main{
+  height: auto;
+}
 /* slides */
 main .container{
   justify-content: center;
@@ -11,7 +14,10 @@ main .container .slides{
   height: auto;
   padding: 0 30px;
 }
-
+main .container .slides h2{
+  padding-top: 20px;
+  text-align: center;
+}
 main .container .slides .doc{
   width: 80%;
   padding-top: 20px;
@@ -21,9 +27,10 @@ main .container .slides .doc{
 }
 main .container .slides .desc{
   width: 70%;
+  padding-top: 20px;
   height: auto;
   margin: auto;
-  font-size: 100%
+  text-align: center;
 }
 main .container .slides img{
   padding-top: 20px;
