--- a/TUGAS HCI/assets/css/playStyle.css
+++ b/TUGAS HCI/assets/css/playStyle.css
@@ -1,10 +1,24 @@
 main{
   height: auto;
 }
-#bgVid {
+main #bgVid {
   position: fixed;
   right: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
+}
+main .content {
+
+}
+main .login-form{
+  position: absolute;
+    left: 0px;
+    top: 0px;
+    margin: 10px;
+    padding: 5px 5px;
+    font-size: 20px;
+    font-family: Helvetica;
+    color: #FFF;
+    background-color: rgba(50, 50, 50, 0.3);  
 }
