--- a/TUGAS HCI/assets/css/playStyle.css
+++ b/TUGAS HCI/assets/css/playStyle.css
@@ -3,22 +3,21 @@ main{
 }
 main #bgVid {
   position: fixed;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%
 }
-main .content {
-
-}
-main .login-form{
-  position: absolute;
-    left: 0px;
-    top: 0px;
-    margin: 10px;
-    padding: 5px 5px;
-    font-size: 20px;
-    font-family: Helvetica;
-    color: #FFF;
-    background-color: rgba(50, 50, 50, 0.3);  
+.content form {
+  margin-top: 50%;
+  font-family: arial;
+  position: relative;
+    bottom: 0;
+    background: white;
+    width: 100%;
+    padding: 20px;
+    border-radius: 20px;
+    border: none;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
