--- a/TUGAS HCI/assets/css/style.css
+++ b/TUGAS HCI/assets/css/style.css
@@ -125,7 +125,9 @@ main .right{
 .active {
   background-color: #717171;
 }
-
+.active, .dot:hover {
+  background-color: #717171;
+}
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
